MM-36873 Fix text wrapping in channel navigator

--- a/sass/layout/_sidebar-left.scss
+++ b/sass/layout/_sidebar-left.scss
@@ -206,6 +206,12 @@
                 font-size: 18px;
             }
 
+            .SidebarChannelNavigator_jumpToText {
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+            }
+
             .SidebarChannelNavigator_shortcutText {
                 display: none;
                 padding-right: 3px;
